--- a/styles.css
+++ b/styles.css
@@ -19,15 +19,23 @@ main {
   padding: 20px;
 }
 
-.bloco {
-  width: 80%;
-  margin: 20px auto;
+.linha {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.modulo {
+  width: 20%;
+  margin: 20px;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff; /* Adicionado estilo de fundo branco */
+  color: #333; /* Adicionado cor de texto escura */
 }
 
-.bloco h2 {
+.modulo h2 {
   margin-top: 0;
 }
