--- a/styled.css
+++ b/styled.css
@@ -34,6 +34,7 @@ main {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   color: #333;
+  text-align: center; /* Adicionado estilo de texto centralizado */
 }
 
 .modulo:hover {
