--- a/styled.css
+++ b/styled.css
@@ -1,7 +1,7 @@
 /* Estilo moderno com paleta de cores azul */
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Calibri, sans-serif;
   background-color: #f7f7f7;
 }
 
