--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,23 @@
 /* styles.css */
 
 body {
-  font-family: Calibri, sans-serif;
+  font-family: Arial, sans-serif;
   background-color: #f7f7f7;
 }
 
-header {
+.header {
   background-color: #2196f3;
   color: #fff;
   padding: 20px;
   text-align: center;
+  width: 100%;
 }
 
 .container {
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
