--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ body {
   padding: 20px;
   text-align: center;
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .container {
@@ -20,6 +23,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 80px; /* adicionado para compensar o cabeçalho */
 }
 
 .login-module {
