--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 /* styles.css */
 
 body {
-  font-family: Calibri, sans-serif;
+  font-family: Arial, sans-serif;
   background-color: #f7f7f7;
+  margin: 0;
+  padding: 0;
 }
 
 .header {
@@ -11,19 +13,16 @@ body {
   padding: 20px;
   text-align: center;
   width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 80px); /* ajustado para compensar o cabeçalho */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 80px; /* adicionado para compensar o cabeçalho */
+  padding-top: 20px;
 }
 
 .login-module {
