--- a/peritagem.css
+++ b/peritagem.css
@@ -1,100 +1,58 @@
-/* Reset básico para o design */
-body, h1, h2, p, input, select, button {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: Calibri, sans-serif;
-    background-color: #e6f7ff;
+    background-color: #f0f8ff;
     color: #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.container {
-    max-width: 600px;
-    padding: 20px;
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
 h1 {
+    color: #0056b3;
+}
+
+form {
     margin-bottom: 20px;
-    color: #007bff;
 }
 
 .form-group {
     margin-bottom: 15px;
-    text-align: left;
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-input[type="text"], input[type="date"], select {
-    padding: 10px;
-    border: 1px solid #007bff;
-    border-radius: 4px;
-    width: 100%;
-}
-
-.ss-id-group {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#ss {
-    width: calc(100% - 100px); /* Ajuste para permitir a largura do select */
-}
-
-#id {
-    width: 80px; /* Ajuste o tamanho conforme necessário */
-    margin-left: 5px;
-}
-
-#opcoesPeca {
-    margin-top: 20px;
-}
-
-button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-button:hover {
-    background-color: #0056b3;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
 }
 
-table th, table td {
+th, td {
     border: 1px solid #ddd;
     padding: 8px;
-    text-align: left;
+    text-align: center;
 }
 
-table th {
-    background-color: #007bff;
+th {
+    background-color: #0056b3;
     color: white;
+}
+
+.delete-button {
+    color: red;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 18px;
+    display: inline-block;
+    width: 100%; /* Faz com que o "X" ocupe toda a largura da célula */
+}
+
+td {
+    vertical-align: middle; /* Centraliza o conteúdo verticalmente */
 }
 
 .hidden {
