--- a/criarperitagem.css
+++ b/criarperitagem.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Calibri', sans-serif;
+    font-family: 'Arial', sans-serif;
     background-color: #f0f8ff;
     display: flex;
     justify-content: center;
